# CompilationPrincple

./: CMakeLists.txt  DeBug.md  Error.cpp  Error.h  Interpretation_execution.cpp  Interpretation_execution.h  Lexical_analysi.cpp  README.md  Semantic_analysis.cpp  Semantic_analysis.h  Symbol_Table.cpp  Symbol_Table.h  Syntax_analysis.cpp  Syntax_analysis.h  Table.cpp  Table.h  error.txt  input.txt  lexical_analysis.cpp  lexical_analysis.h  main.cpp  pcoderesult.txt  testfile.txt  testfile1.txt  编译器构造.md
Syntax_analysis/: Syntax_analysis.h  main.cpp
XinSC/: Symbol_Table.cpp  Syntax_analysis.cpp  Syntax_analysis.h  main.cpp
XinSC/Syntax_analysis/: Syntax_analysis.cpp  lexical_analysis.cpp  lexical_analysis.h
